--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark  bg-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark  bg-dark navbar-hover ">
         <a class="navbar-brand" href="/index.html">THE STELLAR</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#id="navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="id="navbarSupportedContent"">
+        <div class="collapse navbar-collapse" id="navbarHover">
             <ul class="navbar-nav mr-auto ">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarHover" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <h9> Lets Meet Stellar</h9>
                     </a>
@@ -43,7 +43,7 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarHover" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <h9> About</h9>
                     </a>
@@ -54,20 +54,20 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link dropdown-toggle" href="#"  id="navbarHover" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         Products
                     </a>
 
                     <ul class="dropdown-menu ">
-                        <li><a class="dropdown-item dropdown-toggle" href="#" href="#" id="navbarDropdown" role="button"
+                        <li><a class="dropdown-item dropdown-toggle" href="#" href="#" id="navbarHover" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Office Automation</a>
                             <ul class="dropdown-menu ">
                                 <li><a class="dropdown-item" href="/office.html"> Photocopiers </a></li>
                                 <li><a class="dropdown-item" href="/printers.html"> Printers </a></li>
                             </ul>
                         <li><a class="dropdown-item" href="/visual.html">Visual Solutions</a></li>
-                        <li><a class="dropdown-item dropdown-toggle" href="#" href="#" id="navbarDropdown" role="button"
+                        <li><a class="dropdown-item dropdown-toggle" href="#" href="#" id="navbarHover" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Air Purifiers</a>
                             <ul class="dropdown-menu ">
                                 <li><a class="dropdown-item" href="/air.html"> Home </a></li>
@@ -79,7 +79,7 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link dropdown-toggle" href="#"  id="navbarHover" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         Solutions
                     </a>
