--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarHover">
-            <ul class="navbar-nav mr-auto ">
+            <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarHover" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
