--- a/index.html
+++ b/index.html
@@ -54,21 +54,22 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#"  id="navbarHover" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link dropdown-toggle" href="#"  id="navbarHover" data-toggle="dropdown"  aria-haspopup="true"
                         aria-expanded="false">
                         Products
                     </a>
-
+                     <span class="caret"></span> 
                     <ul class="dropdown-menu ">
                         <li><a class="dropdown-item dropdown-toggle" href="#" href="#" id="navbarHover" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Office Automation</a>
+                        data-toggle="dropdown" data-target="dropdown" aria-haspopup="true" aria-expanded="false">Office Automation</a>
+                           <span class="caret"></span> 
                             <ul class="dropdown-menu ">
                                 <li><a class="dropdown-item" href="/office.html"> Photocopiers </a></li>
                                 <li><a class="dropdown-item" href="/printers.html"> Printers </a></li>
                             </ul>
                         <li><a class="dropdown-item" href="/visual.html">Visual Solutions</a></li>
                         <li><a class="dropdown-item dropdown-toggle" href="#" href="#" id="navbarHover" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Air Purifiers</a>
+                        data-toggle="dropdown" data-target="dropdown" aria-haspopup="true" aria-expanded="false">Air Purifiers</a>
                             <ul class="dropdown-menu ">
                                 <li><a class="dropdown-item" href="/air.html"> Home </a></li>
                                 <li><a class="dropdown-item" href="/car.html"> Car </a></li>
