--- a/blog.html
+++ b/blog.html
@@ -279,10 +279,8 @@
 
         </div>
         
-        <a class="nav-link" href="/index.html">
-            <h3 class="text-dark">Back</h3>
-        </a>
-        <a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-dark">Back</h3>
+        
+        <a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-white">Back</h3>
            </a>
 
     </div>
