--- a/about.html
+++ b/about.html
@@ -216,25 +216,7 @@
 
 
 
-    <div class="container my-10">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/about.html">Our Company</a>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/culture.html">Culture </a>
-
-
-                    </li>
-                    <li class="nav-item active ">
-                        <a class="nav-link" href="/careers.html">Careers</a>
-                    </li>
-
-                </ul>
-            </div>
-        </nav>
-    </div>  
+   
      <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -243,7 +225,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!--img class="bd-placeholder-img" src="8.jpg" class="img-fluid" width="1600" height="400"-->
-                 <img  src="images2/stellar.jpg" class="rounded mx-auto d-block"  width="900" height="400"  alt="Responsive image">
+                 <img  src="images2/stellar.jpg" class="rounded mx-auto d-block"  width="900" height="400" class="img-fluid" alt="Responsive image">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="carousel-caption text-left">
 
@@ -299,9 +281,9 @@
 
             </div>
 
-<a class="nav-link" href="/index.html">
-            <h3 class="text-dark">Back</h3>
-        </a>
+<a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
 
             <footer class="container">
                 <p class="float-right justify-content-center align-items-center"><a href="#">Back to top</a></p>
