--- a/office.html
+++ b/office.html
@@ -258,9 +258,9 @@ mx-auto" width="400" height="200" src="images3\office_solutions.png" class="img-
             </div>
 
             <div class="clearfix"></div><br>
-            <a class="nav-link" href="/index.html">
-                <h3 class="text-dark">Back</h3>
-            </a>
+            <a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
         </div>
 
 
