--- a/photocopier.html
+++ b/photocopier.html
@@ -368,7 +368,10 @@
             </div>
 
         </div>
-        <a class="nav-link" href="/office.html"><h3 class="text-dark">Back</h3> </a>
+        <a class="btn btn-dark btn-rounded"" " href="/office.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
+      
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
