--- a/printers.html
+++ b/printers.html
@@ -246,7 +246,9 @@
 mx-auto" width="400" height="200" src="images1/p2.jpg" class="img-fluid">
             </div>
         </div>
-  <a class="nav-link" href="/index.html"><h3 class="text-dark">Back</h3> </a>
+ <a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
         <div class="clearfix"></div><br>
     </div>
 </body>
