--- a/businessprinters.html
+++ b/businessprinters.html
@@ -283,7 +283,10 @@
                 </div>
             </div>
         </div>
-        <a class="nav-link" href="/printers.html"><h3 class="text-dark">Back</h3> </a>
+        <a class="btn btn-dark btn-rounded"" " href="/printers.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
+      
         
     </div>
     <!-- Optional JavaScript -->
