--- a/ar6020DV.html
+++ b/ar6020DV.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <title>THE STELLAR | Emerging Leader </title>
+    <title>THE STELLAR | Office solutions | Photocopiers  </title>
 </head>
 
 <body>
