--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <title>THE STELLAR | Emerging Leader </title>
+    <title>THE STELLAR | Contact Us </title>
 </head>
 
 <body>
