--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!--img class="bd-placeholder-img" src="8.jpg" class="img-fluid" width="1600" height="400"-->
-                 <img  src="images2/stellar.jpg" class="rounded mx-auto d-block"  width="1600" height="400" class="img-fluid" alt="Responsive image">
+                 <img  src="images2/stellar.jpg"   width="1600" height="400" class="img-fluid" alt="Responsive image">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="carousel-caption text-left">
 
@@ -254,8 +254,8 @@
 
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images1\e4.jpg"
-                            alt="Resposive image">
+                        <img class="bd-placeholder-img"   class="img-fluid" width="250" height="300" src="images1\e4.jpg"
+                            alt="Responsive image">
                     </div>
                 </div>
             </div>
@@ -274,7 +274,7 @@
 
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg"
+                        <img class="bd-placeholder-img "  class="img-fluid" width="250" height="300" src="images3\news.jpg"
                             alt="Responsive image">
                     </div>
                 </div>
