--- a/hp.html
+++ b/hp.html
@@ -742,9 +742,9 @@
             </div>
 
     </div>
-    <a class="nav-link" href="/companysite">
-            <h3 class="text-dark">Back</h3>
-        </a>
+    <a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
