--- a/hp.html
+++ b/hp.html
@@ -742,7 +742,7 @@
             </div>
 
     </div>
-    <a class="btn btn-dark btn-rounded"" " href="/index.html" role="button"><h3 class="text-white">Back</h3>
+    <a class="btn btn-dark btn-rounded" href="/index.html" role="button"><h3 class="text-white">Back</h3>
            </a>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
