--- a/MX3560.html
+++ b/MX3560.html
@@ -2,13 +2,12 @@
 <html lang="en" wtx-context="85E22057-6FDD-4C85-80C5-F63AE3592470">
 
 <head>
-
-
-    <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
+         <meta property="og:title" content="The Stellar | One Stop solution that Builds great experiences for your brand ">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -18,7 +17,7 @@
         <link rel="stylesheet" href="bootnavbar.css">
        
 
-        <title>Emerging Leader!</title>
+        <title>STELLAR| Office Solutions | Photocopiers</title>
     </head>
 
 <body>
@@ -197,7 +196,9 @@
 
 
             </div>
-            <a class="nav-link" href="/photocopier.html"><h3 class="text-dark">Back</h3> </a>
+         <a class="btn btn-dark btn-rounded"  href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
            
         </div>
         <!-- Optional JavaScript -->
