--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <img src="images1/bg5.jpeg " width="1600" height="500" alt="Responsive image">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to THE STELLER</h2>
-                   
+                    <p> One Stop Solution</p>
                     
 
                 </div>
