--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="carousel-item active">
                 <img src="images1/bg5.jpeg " width="1600" height="500" alt="Responsive image">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2 class="btn btn-success>Welcome to THE STELLER</h2>
+                    <h2 class="text-success">Welcome to THE STELLER</h2>
                     <p class="btn btn-danger> One Stop Solution</p>
                     
 
