--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             <div class="carousel-item active">
                 <img src="images1/bg5.jpeg " width="1600" height="500" alt="Responsive image">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2 class="text-success">Welcome to THE STELLER</h2>
-                    <p class="text-danger"> One Stop Solution</p>
+                    <h2 class="text-danger">Welcome to THE STELLER</h2>
+                    <p class="text-success"> One Stop Solution</p>
                     
 
                 </div>
