--- a/air.html
+++ b/air.html
@@ -11,7 +11,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-     <link rel="stylesheet" href="css\pop.css">
+     <link rel="stylesheet" href="css/pop.css">
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
@@ -233,7 +233,7 @@
                             <h1 class="text-danger">AIR PURIFIERS.</h1>
                         <h3><p class="text-success">Protect your loved ones
                                 With world's most popular indoor air defence system</p></h3>
-                            <p><a href="/companysite/Airpurifier.html" class="btn btn-success ">Explore more AIR PURIFIERS</a></p>
+                            <p><a href="/Airpurifier.html" class="btn btn-success ">Explore more AIR PURIFIERS</a></p>
                         </div>
                     </div>
                 </div>
