--- a/car.html
+++ b/car.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
+    <link rel="stylesheet" href="css/pop.css">
 
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <title>THE STELLAR | Emerging Leader </title>
+    <title>THE STELLAR | Air Purifiers| Car </title>
 </head>
 
 <body>
