--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images1/bg5.jpeg " width="1600" height="500" class="img-fluid" alt="Responsive image">
+                <img class="d-block img-fluid" src="images1/bg5.jpeg " width="1600" height="500"  alt="Responsive image">
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="text-dark"><strong>Welcome to THE STELLER</strong></h2>
                    
@@ -234,7 +234,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images3/network.jpg" width="1600" height="500" class="img-fluid" alt="Responsive image">
+                <img src="images3/network.jpg" width="1600" height="500" class="d-block img-fluid" alt="Responsive image">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Networking</h5>
                     <p>Think something out of the box!!!.</p>
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images1/covidsol.jpg" width="1600" height="500" class="img-fluid" alt="Responsive image">
+                <img src="images1/covidsol.jpg" width="1600" height="500" class="d-block img-fluid" alt="Responsive image">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Covid-19 Solutions</h5>
                     <p>Explore World!!</p>
@@ -280,7 +280,7 @@
 
                     </div>
                     <div class="col-auto d-none d-md-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images1\e4.jpg" alt="Resposive image">
+                        <img class="bd-placeholder-img"  width="250" height="300" src="images1\e4.jpg" class="img-fluid" alt="Resposive image">
                     </div>
                 </div>
             </div>
@@ -299,7 +299,7 @@
 
                     </div>
                     <div class="col-auto d-none d-md-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg" alt="Responsive image">
+                        <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg" class="img-fluid" alt="Responsive image">
                     </div>
                 </div>
 
