--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <ul class="dropdown-menu ">
                                         <li><a class="dropdown-item dropdown-toggle" href="#"> Kiosk Solutions</a>
                                             <ul class="dropdown-menu ">
-                                                <li> <a class="dropdown-item" href="/Self.html"> Self Check</a></li>
+                                                <li> <a class="dropdown-item" href="/self.html"> Self Check</a></li>
                                                 <li> <a class="dropdown-item" href="/klean.html"> KleanTube</a></li>
                                             </ul>
                                         </li>
