--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                         <li><a class="dropdown-item dropdown-toggle" href="#"> Kiosk Solutions</a>
                                             <ul class="dropdown-menu ">
                                                 <li> <a class="dropdown-item" href="/self.html"> Self Check</a></li>
-                                                <li> <a class="dropdown-item" href="/klean.html"> KleanTube</a></li>
+                                                <li> <a class="dropdown-item" href="/Klean.html"> KleanTube</a></li>
                                             </ul>
                                         </li>
 
