--- a/contact.html
+++ b/contact.html
@@ -307,12 +307,12 @@
         <div class="col-md-3 text-center">
             <p class="reach-us"><strong>REACH US</strong></p>
             <ul class="list-unstyled mb-0">
-                
-                <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 91 9491399000 or +91 40 35564758</p>
+                <i class="fa fa-phone-square" aria-hidden="true"></i>
+                    <p> +91 40 35564758</p>
+                <i class="fa fa-mobile" aria-hidden="true"></i>
+                 <p>+ 91 9491399000 </p>
                 </li>
-
-                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
                     <p>sales@thestellar.in</p>
                 </li>
             </ul>
@@ -328,7 +328,7 @@
                 <ul class="list-unstyled list-inline text-center">
                     <p class="stay-connnected"><strong>STAY CONNECTED</strong></p>
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/bharti.kothuri" target="_blank">
+                        <a href="https://www.facebook.com/" target="_blank">
                             <i class="fa fa-facebook-f"> </i>
                         </a>
                     </li>
