--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
             <div class="controls">
 
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="form-group">
                             <label for="form_name">Firstname *</label>
                             <input id="form_name" type="text" name="name" class="form-control"
@@ -238,7 +238,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="form-group">
                             <label for="form_lastname">Lastname *</label>
                             <input id="form_lastname" type="text" name="surname" class="form-control"
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="form-group">
                             <label for="form_email">Email *</label>
                             <input id="form_email" type="email" name="email" class="form-control"
@@ -259,7 +259,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="form-group">
                             <label for="form_need">Please specify your need *</label>
                             <select id="form_need" name="need" class="form-control" required="required"
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-8">
                         <div class="form-group has-error has-danger">
                             <label for="form_message">Message *</label>
                             <textarea id="form_message" name="message" class="form-control"
@@ -289,15 +289,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12">
+                    <div class="col-md-8">
                         <input type="submit" class="btn btn-success btn-send disabled" value="Send message"
                             wtx-context="F9BF9B22-81EC-4146-9845-824F78CDFA52">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-8">
                         <p class="text-muted">
-                            <strong>*</strong> These fields are required. 
+                            <strong>*</strong> mandatory fields . 
                         </p>
                     </div>
                 </div>
