--- a/contact.html
+++ b/contact.html
@@ -304,17 +304,27 @@
             </div>
         </form>
          <!--Grid column-->
-        <div class="col-md-3 text-center">
-            <p class="reach-us"><strong>REACH US</strong></p>
-            <ul class="list-unstyled mb-0">
-                <i class="fa fa-phone-square" aria-hidden="true"></i>
-                    <p> +91 40 35564758</p>
-                <i class="fa fa-mobile" aria-hidden="true"></i>
-                 <p>+ 91 9491399000 </p>
-                </li>
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <p>sales@thestellar.in</p>
-                </li>
+       <div class="container ">
+            <ul class="list-unstyled list-inline text-center">
+            <p class="text-align-center"><strong>REACH US </strong></p> 
+            <div class="row">
+                <div class="col">
+                    <ul class="list-unstyled mb-0">
+                      <li>  <i class="fa fa-phone-square" aria-hidden="true"></i>
+                            <p> +91 40 35564758</p>
+                        </li>
+                   </div>
+                   <div class="col">
+                      <li>   <i class="fa fa-mobile" aria-hidden="true"></i>
+                             <p>+ 91 9491399000 </p>
+                     </li>
+                    </div>
+                     <div class="col">
+                        <li>   <i class="fa fa-envelope" aria-hidden="true"></i>
+                                <p>sales@thestellar.in</p>
+                        </li>
+                    </div>
+               </div>
             </ul>
         </div>
         <!--Grid column-->
