--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark  bg-dark navbar-hover">
+<nav class="navbar navbar-expand-sm  navbar-dark  bg-dark navbar-hover">
             <a class="navbar-brand" href="/index.html">THE STELLAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
