--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
 
-   <link rel="stylesheet" href="style1.css">
+   <link rel="stylesheet" href="css/style1.css">
 
 
     <title>THE STELLAR | Emerging leader </title>
