--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class=" img-fluid" src="images1/bg5.jpeg " width="1600" height="300"  alt="Responsive image">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption  d-md-block">
                     <h2 class="text-dark"><strong>Welcome to THE STELLER</strong></h2>
                    
                     
@@ -186,7 +186,7 @@
             </div>
             <div class="carousel-item">
                 <img src="images3/network.jpg" width="1600" height="300" class=" img-fluid" alt="Responsive image">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption  d-md-block">
                     <h5>Networking</h5>
                     <p>Think something out of the box!!!.</p>
                     <button class="btn btn-danger">LAN Security</button>
@@ -197,7 +197,7 @@
             </div>
             <div class="carousel-item">
                 <img src="images1/covidsol.jpg" width="1600" height="300" class=" img-fluid" alt="Responsive image">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption  d-md-block">
                     <h5>Covid-19 Solutions</h5>
                     <p>Explore World!!</p>
                     <button class="btn btn-danger">Software</button>
