--- a/AA1.html
+++ b/AA1.html
@@ -13,7 +13,7 @@
 
 
     <link rel="stylesheet" href="css/style1.css">
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Stellar | ESDS Sofware | Covid-19 Testing Solutions </title>
 </head>
 
