--- a/businessprinters.html
+++ b/businessprinters.html
@@ -171,7 +171,7 @@
     <div class="container my-4">
         <h5>Business Inkjet Printers</h5>
         <nav aria-label="breadcrumb">
-            <ol class="breadcrumb ">
+            <ol class="breadcrumb blue-grey ">
 
                 <li class="breadcrumb-item"><a class="black-text" href="/printers.html">Office Solutions</a></li>
                 <li class="breadcrumb-item"><a class="black-text" href="/businessprinters.html">Printers</a></li>
