--- a/camera.html
+++ b/camera.html
@@ -180,7 +180,7 @@
 mx-auto" width="400" height="200" src="images2/page.png" class="img-fluid">
             </div>
    
-        <a class="nav-link" href="/companysite/about.html">
+        <a class="nav-link" href="/about.html">
         <h3 class="text-dark">Back</h3>
     </a>
 
