--- a/camera.html
+++ b/camera.html
@@ -178,7 +178,7 @@
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1 class="text-dark">CCTV and Surveillance Solutions</h1>
+                        <h1 class="text-dark"></h1>
 
                     </div>
                 </div>
