--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
                             end-to-end solutions, on time, on budget and on target.</p>
 
                     </div>
-                    <div class="col-auto d-none d-lg-block">
+                    <div class="col-auto d-lg-block">
                         <img class="bd-placeholder-img "  class="img-fluid" width="250" height="300" src="images3\news.jpg"
                             alt="Responsive image">
                     </div>
