--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+       <link rel="canonical" href="thestellar.in"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | One Stop solution that Builds great experiences for your brand ">
