--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         </p>
 
                     </div>
-                    <div class="col-auto d-none d-md-block">
+                    <div class="col-auto  d-md-block">
                         <img class="bd-placeholder-img"  width="250" height="300" src="images1\e4.jpg" class="img-fluid" alt="Resposive image">
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                             end-to-end solutions, on time, on budget and on target.</p>
 
                     </div>
-                    <div class="col-auto d-none d-md-block">
+                    <div class="col-auto  d-md-block">
                         <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg" class="img-fluid" alt="Responsive image">
                     </div>
                 </div>
