--- a/AA.html
+++ b/AA.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html lang="en" wtx-context="85E22057-6FDD-4C85-80C5-F63AE3592470">
 <head>
+    <script type="text/javascript">
+        var host="thestellar.in";
+        if((host=window.location.host) && (window.location.protocol !="https:"))
+            window.loaction.protocol="https";
+    </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <link rel="canonical" href="thestellar.in"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | One Stop solution that Builds great experiences for your brand ">
@@ -177,8 +184,8 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="images1/AI .jpg"
-                    class="img-fluid">
+                <img class="img-fluid" class="bd-placeholder-img " width="1600" height="400" src="images1/AI .jpg"
+                   alt="Responsive image ">
                     <div class="container">
                         <div class="carousel-caption text-left">
                             <h1> Covid 19 Testing AI Software </h1>
@@ -214,7 +221,7 @@
                 </p>
                 <p> <a href="pdf/Technical Document - AA+Covid-19 Testing Solution .pdf"
                         title="AA+ COVID-19 Testing Solution" target="_blank" class="btn btn-small" href="#">
-                        <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img class="img-fluid src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
             </div>
 
