--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </script>   
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <link rel="canonical" href="thestellar.in"/>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | Emerging leader in X-Ray,Photocopiers(MFPs),Printers,Covid 19 Solutions and HP Series(EPABX) ">
@@ -231,13 +231,13 @@
 
                         <h4 class="mb-0">Events</h4>
                         <br>
-                        <p class="card-text mb-auto">Stellar are committed to business
+                        <p class=""d-flex justify-content-between align-items-center"">Stellar are committed to business
                             excellence by integrating quality principles and methods throughout the company.
                         </p>
 
                     </div>
                     <div class="col-auto  d-md-block">
-                        <img class="bd-placeholder-img"  width="250" height="300" src="images1\e4.jpg" class="img-fluid" alt="Resposive image">
+                        <img class="bd-placeholder-img"  width="250" height="300" src="images1\e4.jpg" class="img-fluid" alt="Responsive image">
                     </div>
                 </div>
             </div>
