--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
                         <h4 class="mb-0">Events</h4>
                         <br>
-                        <p class=""d-flex justify-content-between align-items-center"">Stellar are committed to business
+                        <p class="d-flex justify-content-between align-items-center">Stellar are committed to business
                             excellence by integrating quality principles and methods throughout the company.
                         </p>
 
@@ -248,7 +248,7 @@
                     <div class="col p-2 d-flex flex-column position-static">
                         <h4 class="mb-0">News Room</h4>
                         <br>
-                        <p class="card-text mb-auto">Stellar has established strategic alliances with industry leaders
+                        <p class="d-flex justify-content-between align-items-center">Stellar has established strategic alliances with industry leaders
                             across
                             multiple technology domains, which effectively enables us to provide cross synergies to
                             offer a 'one-stop' window concept. This unique position enables us to provide complete
