--- a/switch.html
+++ b/switch.html
@@ -182,8 +182,8 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="400"
-                    src="/images/images1/switchhingandrouting1.png" alt="Responsive image">
+                <img  width="1600" height="400" class=" img-fluid" 
+                    src="images1/switchhingandrouting1.png" alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <div class="carousel-caption text-light">
