--- a/cabling.html
+++ b/cabling.html
@@ -166,6 +166,32 @@
             <li><a href="/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a></li>
         </ul>
     </nav>
+    <h3 class="text-dark align-text-center"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Structured Cabling</strong></h3>
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            >
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item-active">
+                <img class=" img-fluid" width="1000" height="400" class="rounded mx-auto d-block"
+                    src="images1/Structured-Cabling1.png" alt="Responsive image">
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <div class="carousel-caption text-light">
+
+                         
+
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
      <div class="container my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-11 gx-5 mb-4 ">
